--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,75 @@
-.App {
-  text-align: center;
+h2 {
+  font-weight: bold;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+.Content_1 {
+  padding: 7%;
+  height: 100%;
+  width: 100%;
+  background-color: #ffffff;
+  margin: 0px;
+  font-family: "arial";
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.Content_1 img {
+  float: right;
 }
 
-.App-link {
-  color: #61dafb;
+.Content_2 {
+  padding: 150px 40px 30px 40px;
+  padding-left: 8%;
+  height: 100%;
+  width: 100%;
+  background-color: #1b1c1c;
+  color: #ffffff;
+  margin: auto;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.Content_3 {
+  padding: 30px 40px 50px 40px;
+  height: 100%;
+  width: 100%;
+  background-image: linear-gradient(#1b1c1c, #dadbdf);
+  color: #ffffff;
+  margin: auto;
+}
+
+.Content_3 img {
+  float: right;
+}
+
+.text-1 {
+  padding-bottom: 20px;
+  padding-right: 10%;
+}
+
+.text-2 {
+  padding-top: 40px;
+  padding-bottom: 20px;
+  padding-left: 15%;
+}
+
+@media screen and (max-width: 1200px) {
+  .Content_1 img {
+    float: none;
+    margin: auto;
+    display: block;
   }
-  to {
-    transform: rotate(360deg);
+  .Content_3 img {
+    float: none;
+    margin: auto;
+    display: block;
+  }
+}
+
+@media screen and (max-width: 990px) {
+  .Content_1 {
+    padding-bottom: 150px;
+  }
+  .text-1 {
+    padding-left: 0px;
+  }
+  .text-2 {
+    padding-left: 0px;
   }
 }
