--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@ h2 {
   width: 100%;
   background-color: #ffffff;
   margin: 0px;
-  font-family: "arial";
+  font-family: "Verdana";
 }
 
 .Content_1 img {
@@ -23,6 +23,7 @@ h2 {
   background-color: #1b1c1c;
   color: #ffffff;
   margin: auto;
+  font-family: "Verdana";
 }
 
 .Content_3 {
@@ -32,6 +33,7 @@ h2 {
   background-image: linear-gradient(#1b1c1c, #dadbdf);
   color: #ffffff;
   margin: auto;
+  font-family: "Verdana";
 }
 
 .Content_3 img {
@@ -51,6 +53,11 @@ h2 {
 
 @media screen and (max-width: 1200px) {
   .Content_1 img {
+    float: none;
+    margin: auto;
+    display: block;
+  }
+  .Content_2 img {
     float: none;
     margin: auto;
     display: block;
