--- a/src/components/Slide.css
+++ b/src/components/Slide.css
@@ -41,11 +41,12 @@
 	box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 3);
 }
 
-@media screen and (max-width: 990px) {
+@media only screen and (max-width: 990px) {
 	.SlideBg {
 		top: 0px;
 	}
 	.SlideImage {
+		padding-top: 5%;
 		float: none;
 		margin: auto;
 		display: block;
