--- a/src/components/Slide.css
+++ b/src/components/Slide.css
@@ -1,4 +1,4 @@
-.SlideBg {
+.slideBg {
 	height: 12%;
 	width: 100%;
 	max-height: 130px;
@@ -7,28 +7,28 @@
 	margin: auto;
 }
 
-.SlideBgBlur {
+.slideBgBlur {
 	filter: blur(20px);
 	opacity: 0.3;
 }
 
-.SlideImage {
+.slideImage {
 	width: 240px;
 	float: right;
 }
 
-.SlideDescription {
+.slideDescription {
 	color: #ffffff;
 	text-align: left;
 	padding-right: 57%;
 	font-family: "Verdana";
 }
 
-.SlideDescription p {
+.slideDescription p {
 	color: rgba(250, 250, 250, 0.7);
 }
 
-.SlideDescription button {
+.slideDescription button {
 	margin-right: 15px;
 	font-family: "Verdana";
 }
@@ -42,17 +42,17 @@
 }
 
 @media only screen and (max-width: 990px) {
-	.SlideBg {
-		top: 0px;
+	.slideBg {
+		top: -150px;
 	}
-	.SlideImage {
+	.slideImage {
 		padding-top: 5%;
 		float: none;
 		margin: auto;
 		display: block;
 	}
 
-	.SlideDescription {
+	.slideDescription {
 		margin: auto;
 		text-align: center;
 		padding: 0 10% 0 10%;
